--- a/vivienda-rural-atlantico-sur.html
+++ b/vivienda-rural-atlantico-sur.html
@@ -5,7 +5,8 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Hotel Booking</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-
+        <meta name="description" content="" />
+        <meta name="keywords" content="" />
         <link rel="icon" href="img/favicon.ico" sizes="16x16">
 
         <!-- fonts -->
@@ -46,7 +47,16 @@
           <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
           <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
         <![endif]-->
+        <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+        
+        ga('create', 'UA-69196055-1', 'auto');
+        ga('send', 'pageview');
 
+        </script>
     </head>
     <body id="accomodation_page">
 
@@ -71,7 +81,7 @@
                                   <div class="site_logo fix">
                                       <a id="brand" class="clearfix navbar-brand border-right-whitesmoke" href="index.html"><img src="img/site-logo.png" alt="Trips"></a>
                                        <div class="header_login floatleft">
-                                        <a href="https://conilhospeda.com/hostal-campito/" target="_blank"><img src="/img/ch-top.png" width="90%"></a>
+                                        <a href="https://conilhospeda.com/hostal-campito/" target="_blank"><img src="/img/ch-top.png" width="90%" alt="ConilHospeda_logo"></a>
                                       </div>
                                   </div>
                                 </div>
@@ -88,7 +98,7 @@
                                     <li><a href="#" id="changelang" data-lang="en"><i class="fa fa-flag" aria-hidden="true"></i> English</a></li>
                                   </ul>
                                   <div class="emergency_number">
-                                      <a href="tel:956440708"><img src="img/call-icon.png" alt="">956 440 708</a>
+                                      <a href="tel:956440708"><img src="img/call-icon.png" alt="phone">956 440 708</a>
                                   </div>
                                 </div><!-- /.navbar-collapse -->
                             </nav>
@@ -134,7 +144,7 @@
                                 <div class="single_room_wrapper clearfix">
                                     <figure class="uk-overlay uk-overlay-hover">
                                         <div class="room_media">
-                                            <a href="http://conilhospeda.com/vivienda-rural-atlantico-sur/"><img src="img/rooms/vr1_01.jpg" alt=""></a>
+                                            <a href="http://conilhospeda.com/vivienda-rural-atlantico-sur/"><img src="img/rooms/vr1_01.jpg" alt="img"></a>
                                         </div>
                                         <div class="room_title border-bottom-whitesmoke clearfix">
                                                 <div class="left_room_title floatleft">
@@ -165,7 +175,7 @@
                                 <div class="single_room_wrapper clearfix">
                                     <figure class="uk-overlay uk-overlay-hover">
                                         <div class="room_media">
-                                            <a href="http://conilhospeda.com/vivienda-rural-atlantico-sur/"><img src="img/rooms/vr2_01.jpg" alt=""></a>
+                                            <a href="http://conilhospeda.com/vivienda-rural-atlantico-sur/"><img src="img/rooms/vr2_01.jpg" alt="img"></a>
                                         </div>
                                         <div class="room_title border-bottom-whitesmoke clearfix">
                                                 <div class="left_room_title floatleft">
@@ -196,7 +206,7 @@
                                 <div class="single_room_wrapper clearfix">
                                     <figure class="uk-overlay uk-overlay-hover">
                                         <div class="room_media">
-                                            <a href="http://conilhospeda.com/vivienda-rural-atlantico-sur/"><img src="img/rooms/vr3_01.jpg" alt=""></a>
+                                            <a href="http://conilhospeda.com/vivienda-rural-atlantico-sur/"><img src="img/rooms/vr3_01.jpg" alt="img"></a>
                                         </div>
                                         <div class="room_title border-bottom-whitesmoke clearfix">
                                                 <div class="left_room_title floatleft">
@@ -227,7 +237,7 @@
                                 <div class="single_room_wrapper clearfix">
                                     <figure class="uk-overlay uk-overlay-hover">
                                         <div class="room_media">
-                                            <a href="http://conilhospeda.com/vivienda-rural-atlantico-sur/"><img src="img/rooms/vr4_01.jpg" alt=""></a>
+                                            <a href="http://conilhospeda.com/vivienda-rural-atlantico-sur/"><img src="img/rooms/vr4_01.jpg" alt="img"></a>
                                         </div>
                                         <div class="room_title border-bottom-whitesmoke clearfix">
                                                 <div class="left_room_title floatleft">
@@ -268,6 +278,8 @@
             </div>
         </div>
         <!-- end map -->
+        <h3 data-i18n="hostal.num_JA" class="content-center"></h3>
+        <p class="content-center">Vivienda rural Atlantico sur: N.R.T.A: VR/CA/00290</p>
 
         <!-- start contact us area -->
         <section class="contact_us_area content-left">
@@ -312,7 +324,7 @@
                         <div class="col-lg-4 col-md-4 col-sm-4">
                             <div class="footer_widget">
                                 <div class="footer_logo">
-                                    <a href="#"><img src="img/footer-logo-one.png" alt=""></a>
+                                    <a href="#"><img src="img/footer-logo-one.png" alt="footer_logo"></a>
                                 </div>
                                 <p data-i18n="footer.desc"></p>
                                 <ul>
